--- a/.github/workflows/jpa-fundamental.yaml
+++ b/.github/workflows/jpa-fundamental.yaml
@@ -29,5 +29,5 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
           architecture: x64
-      - name: Run the Maven verify phase
-        run: mvn --batch-mode --update-snapshots verify
+      - name: Run the Maven package phase
+        run: mvn --batch-mode --update-snapshots package
